--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,23 @@
         "framework"
     ],
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "package",
+            "url": "./vendor/phonepe/pg-sdk-php/",
+            "package": {
+                "name": "phonepe/pg-php-sdk-v2",
+                "version": "2.0.0",
+                "dist": {
+                    "url": "https://phonepe.mycloudrepo.io/public/repositories/phonepe-pg-php-sdk/v2-sdk.zip",
+                    "type": "zip"
+                },
+                "autoload": {
+                    "classmap": ["/"]
+                }
+            }
+        }
+    ],
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
@@ -15,7 +32,10 @@
         "laravel/fortify": "^1.30",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "laravel/wayfinder": "^0.1.9"
+        "laravel/wayfinder": "^0.1.9",
+        "phonepe/pg-php-sdk-v2": "^2.0",
+        "vlucas/phpdotenv": "^5.6",
+        "netresearch/jsonmapper": "^4.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
