--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,9 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "laravel/wayfinder": "^0.1.9",
-        "vlucas/phpdotenv": "^5.6",
-        "netresearch/jsonmapper": "^4.4"
+        "maatwebsite/excel": "^3.1",
+        "netresearch/jsonmapper": "^4.4",
+        "vlucas/phpdotenv": "^5.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
