--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "react-calendar": "^6.0.0",
         "react-day-picker": "^9.13.0",
         "react-dom": "^19.2.0",
+        "recharts": "^3.6.0",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
