--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ PHONEPE_ENVIRONMENT=UAT
 PHONEPE_CALLBACK_USERNAME=your_callback_username
 PHONEPE_CALLBACK_PASSWORD=your_callback_password
 
+# Google OAuth
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_REDIRECT_URI=http://127.0.0.1:8000/auth/google/callback
